fix: header menu coffee cup align

--- a/coffee-house/styles/styles.css
+++ b/coffee-house/styles/styles.css
@@ -121,7 +121,7 @@ li.nav-item:hover .hover-line {
 .nav-menu {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-end;
   gap: 4px;
   font-size: 16px;
   font-style: normal;
@@ -133,6 +133,13 @@ li.nav-item:hover .hover-line {
 
 .menu-item {
   margin-right: 5px;
+}
+
+.header-cup {
+  background-image: url(/images/icon-coffee-cup.svg);
+  background-position: top right;
+  background-repeat: no-repeat;
+  width: 70px;
 }
 
 /* Hero */
